# avatar

./: README.md
Blender/Animations/data/: dance.txt  jump.txt  run.txt  walk.txt
Blender/Other Scripts/: BVHextractor.py  GENERICextractor.py  Test_importer.py
ROS/SDF/models/Adam/: test_actor.world
ROS/SDF/models/Ted/: Ted.world
ROS/XACRO/person_description/: CMakeLists.txt  package.xml
ROS/XACRO/person_description/launch/: test_urdf.launch
ROS/XACRO/person_description/meshes/: Body.dae  Head.dae  LeftArm.dae  LeftHand.dae  LeftLeg.dae  RightArm.dae  RightLeg.dae
ROS/XACRO/person_description/urdf/: person.xacro
ROS/person_euler_msgs/: CMakeLists.txt  package.xml
ROS/person_euler_msgs/msg/: Person_Euler.msg
ROS/person_quaternion_msgs/: CMakeLists.txt  package.xml
ROS/person_quaternion_msgs/msg/: BodyPart_Quaternion.msg  Person_Quaternion.msg
ROS/sender/: CMakeLists.txt  package.xml
ROS/sender/scripts/: talker.py
