<?xml version="1.0"?>
<package>
  <name>person_description</name>
  <version>0.0.1</version>
  <description>The person_description URDF package</description>

  <maintainer email="gloria.beraldo@unipd.it">Gloria Beraldo</maintainer>
  <author email="gloria.beraldo@unipd.it">Gloria Beraldo</author>

  <maintainer email="andrea.tss22@gmail.com">Andrea Tessarolo</maintainer>
  <author email="andrea.tss22@gmail.com">Andrea Tessarolo</author>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>

</package>
